force-app/main/default/objects/Actor__c/Actor__c.object-meta.xml
<CustomObject>
    <label>Actor</label>
    <nameField>
        <label>Actor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>