force-app/main/default/objects/Actor__c/fields/Actor_Age__c.field-meta.xml
<CustomField>
    <fullName>Actor_Age__c</fullName>
    <label>Actor Age</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>