force-app/main/default/objects/Actor__c/fields/Actor_Gender__c.field-meta.xml
<CustomField>
    <fullName>Actor_Gender__c</fullName>
    <description>It will display gender</description>
    <label>Actor Gender</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>