force-app/main/default/objects/Actor__c/fields/Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Number__c</fullName>
    <description>It will displat the mobile number</description>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>